--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,19 @@
         <div style="text-align: center">
             <a href="index.html">
                 <pre>
-    __  __                 _   _           _       _   
-    \ \/ /   ___   _ __   | | (_)   __ _  | |__   | |_ 
-     \  /   / _ \ | '_ \  | | | |  / _` | | '_ \  | __|
-     /  \  |  __/ | | | | | | | | | (_| | | | | | | |_ 
-    /_/\_\  \___| |_| |_| |_| |_|  \__, | |_| |_|  \__|
-                                    |___/               
+                                                             
+                                                             
+       __.....__                   __.....__        _..._    
+   .-''         '.             .-''         '.    .'     '.  
+  /     .-''"'-.  `. .-,.--.  /     .-''"'-.  `. .   .-.   . 
+ /     /________\   \|  .-. |/     /________\   \|  '   '  | 
+ |                  || |  | ||                  ||  |   |  | 
+ \    .-------------'| |  | |\    .-------------'|  |   |  | 
+  \    '-.____...---.| |  '-  \    '-.____...---.|  |   |  | 
+   `.             .' | |       `.             .' |  |   |  | 
+     `''-...... -'   | |         `''-...... -'   |  |   |  | 
+                     |_|                         |  |   |  | 
+                                                 '--'   '--' 
       </pre>
             </a>
 
@@ -58,16 +65,9 @@
                     onclick="location.href='mailto:contact@ernn.xyz';"><i
                         class="far fa-envelope"></i></button>
                 <!-- Button with Discord icon -->
-                <button class="contact-button"
-                    onclick="location.href='https://discord.gg/9Ps4c4BcYB';"><i
-                        class="fab fa-discord"></i></button>
                 <!-- Button with Instagram icon -->
                 <button class="contact-button"
-                    onclick="location.href='https://instagram.com/xeniight';"><i
-                        class="fab fa-instagram"></i></button>
-                <!-- Button with GitHub icon -->
-                <button class="contact-button"
-                    onclick="location.href='https://github.com/g0t-h';"><i
+                    onclick="location.href='https://github.com/SH1NSETSU';"><i
                         class="fab fa-github"></i></button>
             </div>
             <br />
