--- a/about.html
+++ b/about.html
@@ -41,28 +41,9 @@
       <div>
         <br>
         <h2>about my dry af personality</h2>
-        <p>19 male from earth, i code stuff. i like playing video games as well. i like spaghetti.
+        <p>19 male from earth, i code stuff. i like playing video games as well.
           <br>
           <br>
-          my laptop specs:
-          <br>
-          - ryzen 5 5625u with integrated graphics
-          <br>
-          - samsung m2 ssd
-          <br>
-          - blic t60 
-          <br>
-          - steelseries prime
-          <br>
-          windows 10 pro. i hate linux.
-          <br>
-          <br>
-          <br>
-
-          c o l l e g e    i  n     l a r i s s a
-          <br>
-          <br>
-          .
           <br>
           <br>
           .
